--- a/header.html
+++ b/header.html
@@ -5,7 +5,7 @@
 <nav id="navBar">
     <menu>
         <li><a href="./index.html">Home</a></li>
-        <li><a href="">About</a></li>
+        <li><a href="./about.html">About</a></li>
         <li><a href="">Contact</a></li>
         <li><a href="">Shop</a></li>
     </menu>
