--- a/index.html
+++ b/index.html
@@ -19,35 +19,36 @@
         </div>
         <div id="productImages">
             <div class="piComp">
-                <div class="piCompImage"><img src="./images/apple1.png" alt=""></div>
-                <div class="piCompTitle"><p>Apple 1</p></div>
+                <a href="" class="piCompImage"><img src="./images/apple1.png" alt="An image of Apple 1 by Apple Computer"></a>
+                <a href="" class="piCompTitle"><p>Apple 1</p></a>
             </div>
             <div class="piComp">
-                <div class="piCompImage"><img src="./images/apple2.png" alt=""></div>
-                <div class="piCompTitle"><p>Apple 2</p></div>
+                <a href="" class="piCompImage"><img src="./images/apple2.png" alt="An image of Apple 2 by Apple Computer"></a>
+                <a href="" class="piCompTitle"><p>Apple 2</p></a>
             </div>
             <div class="piComp">
-                <div class="piCompImage"><img src="./images/macintosh 128k.png" alt=""></div>
-                <div class="piCompTitle">Macintosh 128K</div>
+                <a href="" class="piCompImage"><img src="./images/macintosh 128k.png" alt="An image of Macintosh 128k by Apple Computer"></a>
+                <a href="" class="piCompTitle"><p>Macintosh 128K</p></a>
             </div>
             <div class="piComp">
-                <div class="piCompImage"><img src="./images/macintosh lc.png" alt=""></div>
-                <div class="piCompTitle"><p>Macintosh LC</p></div>
+                <a href="" class="piCompImage"><img src="./images/macintosh lc.png" alt="An image of Macintosh Lc by Apple Computer"></a>
+                <a href="" class="piCompTitle"><p>Macintosh LC</p></a>
             </div>
             <div class="piComp">
-                <div class="piCompImage"><img src="./images/macintosh portable.png" alt=""></div>
-                <div class="piCompTitle"><p>Macintosh Portable</p></div>
+                <a href="" class="piCompImage"><img src="./images/macintosh portable.png" alt="An image of Macintosh Portable by Apple Computer"></a>
+                <a href="" class="piCompTitle"><p>Macintosh Portable</p></a>
             </div>
             <div class="piComp">
-                <div class="piCompImage"><img src="./images/powerbook 100.png" alt=""></div>
-                <div class="piCompTitle"><p>Power Book 100</p></div>
+                <a href="" class="piCompImage"><img src="./images/powerbook 100.png" alt="An image of Power Book 100 by Apple Computer"></a>
+                <a href="" class="piCompTitle"><p>Power Book 100</p></a>
             </div>
             <div class="piComp">
-                <div class="piCompImage"><img src="./images/newton message pad 2000.png" alt=""></div>
-                <div class="piCompTitle"><p>Newton Message Pad 2000</p></div>
+                <a href="" class="piCompImage"><img src="./images/newton message pad 2000.png" alt="An image of Newton Message Pad 2000 by Apple Computer"></a>
+                <a href="" class="piCompTitle"><p>Newton Message Pad 2000</p></a>
             </div>
         </div>
     </section>
+    <footer id="footer"></footer>
 </body>
 </html>
 
